--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>8.0.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
     </dependencies>
 
 
