--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <version>1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
