--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
                     <source>12</source>
                     <target>12</target>
                 </configuration>
+                <version>3.8.0</version>
             </plugin>
 
             <plugin>
