--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,6 +3,6 @@ db.firstName="Tax"
 db.user=root
 db.password=12345678
 db.poolsize=32
-db.url=jdbc:mysql://localhost:3306/Tax?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/Tax?useUnicode=true&allowMultiQueries=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.useUnicode=true
 db.encoding=UTF-8
