--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=info, file
-#log4j.appender.file=org.apache.log4j.RollingFileAppender
-#log4j.appender.file.File=/Users/Sergey/taxreports/src/main/resources/log/log.log
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=./src/main/resources/logs/appLog.log
 log4j.appender.file.MaxBackupIndex=20
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
