--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.matevitsky</groupId>
-  <artifactId>docker-taxreports</artifactId>
+  <artifactId>ROOT</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -86,7 +86,7 @@
   </dependencies>
 
   <build>
-    <finalName>docker-taxreports</finalName>
+    <finalName>ROOT</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
