--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 services: 
   backend: 
     build: 
@@ -6,17 +6,18 @@ services:
       dockerfile: Dockerfile
     image: tax-reports:1 
     ports:
-      - "8080:8080"
-      - "3306:3306"
-    links:
-      - database
+      - '8080:8080'
   database: 
-    image: mysql:latest 
+    image: mysql:latest
     volumes:
       - /var/lib/mysql
-      - ./src/main/resources:/docker-entrypoint-initdb.d
-    command: --default-authentication-plugin=mysql_native_password
+      - ./src/main/resources/init:/docker-entrypoint-initdb.d
     restart: always
-    environment:
-       MYSQL_ROOT_PASSWORD: 12345678
-        
+    environment: 
+      MYSQL_DATABASE: 'Tax'
+      MYSQL_USER: 'root'
+      MYSQL_ROOT_PASSWORD: '12345678'
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
