--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,12 @@
 *.zip
 *.tar.gz
 *.rar
+key
+key.pub
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 
 Time-tracking.iml
+
