--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3.7'
 services: 
-  backend: 
+  backend:
+    container_name: backend
     build: 
       context: .
       dockerfile: Dockerfile
-    image: tax-reports:1 
     ports:
       - '8080:8080'
-  database: 
-    image: mysql:latest
+  database:
+    container_name: db
+    image: mysql:8.0.15
     volumes:
       - /var/lib/mysql
       - ./src/main/resources/init:/docker-entrypoint-initdb.d
@@ -17,7 +18,3 @@ services:
       MYSQL_DATABASE: 'Tax'
       MYSQL_USER: 'root'
       MYSQL_ROOT_PASSWORD: '12345678'
-    ports:
-      - '3306:3306'
-    expose:
-      - '3306'
